feat: Concluido a Exclusao do Cadastro de Usuario Pessoa e entities FKs
Também:
impedir exibição e acesso a instituições com vínculo removido no login

- Valida se o vínculo do usuário com a instituição está ativo
- Exclui corretamente vínculos da instituição ao excluir cadastro
- Impede exibição de instituições sem vínculo no login